--- a/Coverage-call-blocker/View Controller/Menu/Menu.storyboard
+++ b/Coverage-call-blocker/View Controller/Menu/Menu.storyboard
@@ -22,10 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JMv-43-9hJ">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="64" width="414" height="44"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Profile_Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="abI-qu-fxE">
-                                        <rect key="frame" x="24" y="0.0" width="44" height="44"/>
+                                        <rect key="frame" x="16" y="0.0" width="44" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="abI-qu-fxE" secondAttribute="height" multiplier="1:1" id="uMe-Vc-LUk"/>
                                             <constraint firstAttribute="height" constant="44" id="xwb-Th-u0v"/>
@@ -41,11 +41,11 @@
                                 <constraints>
                                     <constraint firstItem="abI-qu-fxE" firstAttribute="centerY" secondItem="JMv-43-9hJ" secondAttribute="centerY" id="7Kr-ut-3eh"/>
                                     <constraint firstAttribute="height" constant="44" id="Cg2-62-dmK"/>
-                                    <constraint firstItem="abI-qu-fxE" firstAttribute="leading" secondItem="JMv-43-9hJ" secondAttribute="leading" constant="24" id="jKF-3X-4VC"/>
+                                    <constraint firstItem="abI-qu-fxE" firstAttribute="leading" secondItem="JMv-43-9hJ" secondAttribute="leading" constant="16" id="jKF-3X-4VC"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="H00-rD-tga">
-                                <rect key="frame" x="0.0" y="120" width="414" height="224"/>
+                                <rect key="frame" x="0.0" y="168" width="414" height="282"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ySc-uH-gdG" customClass="UIControl">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
@@ -105,8 +105,37 @@
                                             <action selector="onBlacklistNumber:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="szM-2i-2bR"/>
                                         </connections>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIR-0D-HZh" customClass="UIControl">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8eS-q1-dA0" customClass="UIControl">
                                         <rect key="frame" x="0.0" y="116" width="414" height="50"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Notification" translatesAutoresizingMaskIntoConstraints="NO" id="fjx-KA-gGh">
+                                                <rect key="frame" x="24" y="13" width="24" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="IyV-R2-mHR"/>
+                                                    <constraint firstAttribute="width" secondItem="fjx-KA-gGh" secondAttribute="height" multiplier="1:1" id="iPO-Hk-rxZ"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Survey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="laR-pa-QYX">
+                                                <rect key="frame" x="60" y="15.5" width="47.5" height="19"/>
+                                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="fjx-KA-gGh" firstAttribute="centerY" secondItem="8eS-q1-dA0" secondAttribute="centerY" id="3zd-QC-Kfh"/>
+                                            <constraint firstAttribute="height" constant="50" id="K2L-6b-qct"/>
+                                            <constraint firstItem="fjx-KA-gGh" firstAttribute="leading" secondItem="8eS-q1-dA0" secondAttribute="leading" constant="24" id="bzx-V9-Zzy"/>
+                                            <constraint firstItem="laR-pa-QYX" firstAttribute="centerY" secondItem="8eS-q1-dA0" secondAttribute="centerY" id="iXV-iX-JDh"/>
+                                            <constraint firstItem="laR-pa-QYX" firstAttribute="leading" secondItem="fjx-KA-gGh" secondAttribute="trailing" constant="12" id="nAM-un-KMy"/>
+                                        </constraints>
+                                        <connections>
+                                            <action selector="onSurvey:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="FEx-Bq-CPF"/>
+                                        </connections>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIR-0D-HZh" customClass="UIControl">
+                                        <rect key="frame" x="0.0" y="174" width="414" height="50"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Setting" translatesAutoresizingMaskIntoConstraints="NO" id="GtP-h8-tfo">
                                                 <rect key="frame" x="24" y="13" width="24" height="24"/>
@@ -135,7 +164,7 @@
                                         </connections>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qlO-Oj-vxP" customClass="UIControl">
-                                        <rect key="frame" x="0.0" y="174" width="414" height="50"/>
+                                        <rect key="frame" x="0.0" y="232" width="414" height="50"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SKs-Ba-niY">
                                                 <rect key="frame" x="24" y="13" width="24" height="24"/>
@@ -168,20 +197,20 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" red="0.20392156862745098" green="0.65098039215686276" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.20392156862745098" green="0.65098039215686276" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="JMv-43-9hJ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="2z2-t7-cRh"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="JMv-43-9hJ" secondAttribute="trailing" id="J7p-Mm-jMp"/>
-                            <constraint firstItem="H00-rD-tga" firstAttribute="top" secondItem="JMv-43-9hJ" secondAttribute="bottom" constant="32" id="U9w-4q-EE5"/>
-                            <constraint firstItem="JMv-43-9hJ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Xlg-4H-6kS"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="H00-rD-tga" secondAttribute="trailing" id="p3B-U9-6Ts"/>
-                            <constraint firstItem="H00-rD-tga" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="qOd-1D-kBU"/>
+                            <constraint firstItem="H00-rD-tga" firstAttribute="top" secondItem="JMv-43-9hJ" secondAttribute="bottom" constant="60" id="IYH-aY-UaY"/>
+                            <constraint firstItem="JMv-43-9hJ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="IxO-LH-9oR"/>
+                            <constraint firstItem="H00-rD-tga" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="LiR-aC-fiE"/>
+                            <constraint firstItem="H00-rD-tga" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="QJa-1a-OKg"/>
+                            <constraint firstItem="JMv-43-9hJ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="UFi-r8-Jxa"/>
+                            <constraint firstItem="JMv-43-9hJ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="j8e-Ye-nsR"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="95"/>
+            <point key="canvasLocation" x="131.8840579710145" y="94.419642857142847"/>
         </scene>
     </scenes>
     <resources>
